2_k8s/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  selector:
    matchLabels:
      app: docker-getting-started
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-getting-started
    spec:
      containers:
      - name: docker-getting-started
        image: "docker/getting-started"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
