2_k8s/web2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: gcr.io/google-samples/hello-app:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
