2_k8s/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: docker-getting-started
  ports:
  - port: 80
  type: NodePort
