2_k8s/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2-service
spec:
  selector:
    app: web2
  ports:
  - port: 8080
  type: NodePort
