2_k8s/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-k8s.zz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend: 
              service:
                name: web2-service
                port: 
                  number: 8080
